# llm_parser

./: .gitignore  Dockerfile.backend  README.md  ai_adapter.py  docker-compose.yml  llm_service.py  main.py  parser_settings.json  prompts.py  pyproject.toml  schemas.py
app/: __init__.py  main.py
app/api/routers/: parser_router.py
app/api/schemas/: schemas.py
app/db/: database.py  models.py
app/repositories/: inventory_repo.py
app/services/inventory_service/: inventory_parser.py
app/services/llm_processing/: llm_service.py  prompts.py
app/services/parser_service/: parser_service.py  spil_utils.py
frontend/: Dockerfile  docker-compose.yml  package-lock.json  package.json
frontend/src/: App.jsx  index.css
