[project]
name = "noways-project"
version = "0.1.0"
description = ""
authors = [
    {name = "noways",email = "hogotretjakovigor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "langchain-openai (>=1.1.10,<2.0.0)",
    "langchain-core (>=1.2.14,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "fastapi (>=0.131.0,<0.132.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "gradio (>=6.9.0,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)"
]
